# ampi

./: .travis.yml  Cargo.toml  readme.md
ampi/: Cargo.toml
ampi-test-macro/: Cargo.toml
ampi-test-macro/src/: lib.rs
ampi-test-runner/: Cargo.toml
ampi-test-runner/src/: lib.rs
ampi/src/: compatible.rs  env.rs  error.rs  future.rs  lib.rs  rank.rs  request.rs
ampi/src/algorithms/: broadcast.rs
examples/: test.rs
examples/hanoi/: Cargo.toml
src/: algorithms.rs  algs.rs  comm.rs  datatype.rs  env.rs  error.rs  exec.rs  future.rs  lib.rs  rank.rs  request.rs  uninitialized.rs
src/algorithms/: all_reduce.rs  exec_on_root_and_broadcast.rs
