[package]
name = "ampi"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"

[dependencies]
mpi-sys = "0.1"
libc = "0.2"
futures-preview = "0.3.0-alpha.10"

[dev-dependencies]
futures-executor-preview = { version = "0.3.0-alpha.10", path = "../futures-rs/futures-executor" }
futures-util-preview = { version = "0.3.0-alpha.10", path = "../futures-rs/futures-util" }
pin-utils = "0.1.0-alpha.3"